# poker2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CFR_ENHANCED_PPO_PLAN.md  ChatGPT Advice.md  DEEPSTACK_INTEGRATION_PLAN.md  Dockerfile  PLAN.md  README.md  REBEL_SEARCH_TRAINING_PLAN.md  TRANSFORMER_IMPLEMENTATION_PLAN.md  VAST_AI_SETUP.md  alphaholdem.txt  benchmark_zero_sum.py  debug_fold.py  debug_rebel_tree.py  deepstack.txt  estimate_batch_size.py  evaluation plan.md  koikoi.txt  measure_training_memory.py  pyproject.toml  rebel.txt  rebel_cfr_evaluator_design.md  requirements.txt  setup.py  seven_step_training_plan.md  supremus.txt  test_board_indices.py  test_card_indices.py  test_rebel_integration.py  test_transformer.py  test_transformer_integration.py  train_vast.sh  trm.txt
.agent/: ExecPlan_sparse_cfr.md
.codex/: AGENTS.md
alphaholdem/: __init__.py
alphaholdem/cli/: demo_kbest.py  param_count.py  train.py  train_kbest.py
alphaholdem/core/: builders.py  config.py  config_loader.py  interfaces.py  registry.py  structured_config.py  typed_config.py  typed_config_dict.py  typed_config_protocol.py
alphaholdem/encoding/: __init__.py  action_mapping.py  actions_encoder.py  betting_bins.py  cards_encoder.py
alphaholdem/env/: __init__.py  analyze_tensor_env.py  debug_tensor_env.py  hunl_env.py  hunl_tensor_env.py  hunl_vector_env.py  rules.py  types.py
alphaholdem/models/: __init__.py  cnn_embedding_data.py  factory.py  heads.py  siamese_convnet.py  state_encoder.py
alphaholdem/rl/: __init__.py  agent_snapshot.py  dred_pool.py  elo_calculator.py  fixed_opponent_pool.py  k_best_pool.py  kmedoids.py  losses.py  opponent_pool.py  replay.py  self_play.py  vectorized_replay.py
alphaholdem/utils/: __init__.py  config_loader.py  ema.py  (+2 more)
benchmarks/: bench_advanced_indexing.py  bench_calculate_unblocked_mass.py  bench_combo_mask.py  bench_fused_cfr_triton.py  bench_indexed_add.py  bench_reach_weights.py  bench_rebel_vs_sparse_300.py  bench_rules_triton.py  bench_set_model_values_indexing.py  bench_sparse_vs_rebel_cfr.py  cfr_optimizations_bench.py  profile_chance_helper.py
conf/: README.md  config.yaml  config_fast.yaml  config_high_perf.yaml  config_rebel_cfr.yaml  config_rebel_debug.yaml  config_transformer.yaml  config_transformer_cfr.yaml  config_transformer_hp.yaml  model_rebel_ffn.yaml
configs/: default.yaml
debugging/: README.md  analyze_preflop_actions.py  analyze_preflop_strategies.py  bench_envs.py  check_advantages.py  collect_rebel_values_and_exploit.py  compare_ppo.py  conversion_overhead_benchmark.py  critic_sanity_check.py  debug_cfr_depth1.py  debug_cfr_iterations.py  debug_checkpoint_size.py  debug_data_generation.py  debug_elo.py  debug_elo_update.py  debug_embedding_norms.py  debug_gae.py  debug_gradient_spikes.py  debug_pre_chance_transition.py  debug_rebel_preflop.py  debug_rebel_tree.py  debug_rewards.py  debug_river_grids.py  detailed_training_analysis.py  diagnose_training.py  downsample_trace.py  forward_pass_memory_analysis.py  gae_comparison.py  gae_comparison_detailed.py  gae_constraint_test.py  gae_true_constraint_test.py  gpu_memory_analysis.py  gpu_memory_checkpointing.py  gradient_checkpointing.py  hand_analysis.py  inspect_transformer_sequence.py  model_debug.py  mps_memory_monitor.py  policy_analysis.py  ppo_component_probe.py  (+27 more)
profiling/: profile_cuda_hotspots.py  profile_embeddings_workload.py  profile_transformer_forward.py
scripts/: bench_parent_expand.py  convert_checkpoint_format.py  convert_relative_imports.py
tests/: test_aggression_analyzer.py  test_alignment.py  test_analyze_tensor_env.py  test_betting_bins.py  test_bins_configurable.py  test_card_utils.py  test_cfr_manager.py  test_chance_node_helper.py  test_config_registry.py  test_dcfr.py  test_debug_cfr_iterations.py  test_dred_pool.py  test_elo_calculator.py  test_ema.py  test_ema_helper.py  test_encoders.py  test_env_helpers.py  test_env_rewards.py  test_env_round_closure.py  test_fused_cfr_triton.py  test_gae_vectorized_vs_ref.py  test_high_exploitability_save.py  test_kbest.py  test_kbest_pool.py  test_kmedoids.py  test_kv_caching.py  test_legal_actions.py  test_losses.py  test_mlp_features.py  test_model_context.py  test_model_forward.py  test_model_utils.py  test_mps_autocast.py  test_pbs_pool.py  test_rebel_batch.py  test_rebel_cfr_evaluator.py  test_rebel_data_generator.py  test_rebel_pipeline.py  test_rebel_preflop_analyzer.py  test_rebel_replay.py  (+15 more)
(+186 files in other folders)
